force-app/main/default/objects/Loan_Application_History__c/Loan_Application_History__c.object-meta.xml
<CustomObject>
    <!-- Lookup (not Master-Detail) to Loan_Application__c: RBI mandates 7-year retention of lending event history independent of parent record lifecycle. -->
    <label>Loan Application History</label>
    <nameField>
        <displayFormat>LAH-{0000000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Application Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>