force-app/main/default/objects/Loan_Application_History__c/fields/Agent_Result__c.field-meta.xml
<CustomField>
    <fullName>Agent_Result__c</fullName>
    <label>Agent Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Pass</fullName>
        </value>
        <value>
            <fullName>Warning</fullName>
        </value>
        <value>
            <fullName>Fail</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>