force-app/main/default/objects/Loan_Application_History__c/fields/Agent_Score_Impact__c.field-meta.xml
<CustomField>
    <fullName>Agent_Score_Impact__c</fullName>
    <label>Agent Score Impact</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>