force-app/main/default/objects/Loan_Application_History__c/fields/Compliance_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Relevant__c</fullName>
    <label>Compliance Relevant</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>