force-app/main/default/objects/Loan_Application_History__c/fields/Decision_Made__c.field-meta.xml
<CustomField>
    <fullName>Decision_Made__c</fullName>
    <label>Decision Made</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Approve</fullName>
        </value>
        <value>
            <fullName>Hold</fullName>
        </value>
        <value>
            <fullName>Reject</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>