force-app/main/default/objects/Loan_Application_History__c/fields/Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seconds__c</fullName>
    <label>Duration Seconds</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>