force-app/main/default/objects/Loan_Application_History__c/fields/Event_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Sub_Type__c</fullName>
    <label>Event Sub Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>