force-app/main/default/objects/Loan_Application_History__c/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <label>Event Timestamp</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>