force-app/main/default/objects/Loan_Application_History__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Application Created</fullName>
        </value>
        <value>
            <fullName>Application Submitted</fullName>
        </value>
        <value>
            <fullName>Document Uploaded</fullName>
        </value>
        <value>
            <fullName>Document Verified</fullName>
        </value>
        <value>
            <fullName>Document Issue Flagged</fullName>
        </value>
        <value>
            <fullName>Agent Run Started</fullName>
        </value>
        <value>
            <fullName>Agent Run Completed</fullName>
        </value>
        <value>
            <fullName>Agent Run Failed</fullName>
        </value>
        <value>
            <fullName>Risk Score Updated</fullName>
        </value>
        <value>
            <fullName>Compliance Check Run</fullName>
        </value>
        <value>
            <fullName>Compliance Violation Found</fullName>
        </value>
        <value>
            <fullName>Compliance Violation Resolved</fullName>
        </value>
        <value>
            <fullName>Loan Decision Generated</fullName>
        </value>
        <value>
            <fullName>Officer Review Started</fullName>
        </value>
        <value>
            <fullName>Officer Decision Made</fullName>
        </value>
        <value>
            <fullName>Application Status Changed</fullName>
        </value>
        <value>
            <fullName>Application On Hold</fullName>
        </value>
        <value>
            <fullName>Application Approved</fullName>
        </value>
        <value>
            <fullName>Application Rejected</fullName>
        </value>
        <value>
            <fullName>Approval Letter Generated</fullName>
        </value>
        <value>
            <fullName>Disbursement Initiated</fullName>
        </value>
        <value>
            <fullName>Disbursement Completed</fullName>
        </value>
        <value>
            <fullName>Disbursement Failed</fullName>
        </value>
        <value>
            <fullName>EMI Schedule Generated</fullName>
        </value>
        <value>
            <fullName>KYC Event</fullName>
        </value>
        <value>
            <fullName>Customer Notification Sent</fullName>
        </value>
        <value>
            <fullName>Application Withdrawn</fullName>
        </value>
        <value>
            <fullName>Application Reopened</fullName>
        </value>
        <value>
            <fullName>Field Modified</fullName>
        </value>
        <value>
            <fullName>Reassigned</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>