force-app/main/default/objects/Loan_Application_History__c/fields/Integration_Reference__c.field-meta.xml
<CustomField>
    <fullName>Integration_Reference__c</fullName>
    <label>Integration Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>