force-app/main/default/objects/Loan_Application_History__c/fields/Missing_Documents_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Missing_Documents_Snapshot__c</fullName>
    <label>Missing Documents Snapshot</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>