force-app/main/default/objects/Loan_Application_History__c/fields/Officer_Override__c.field-meta.xml
<CustomField>
    <fullName>Officer_Override__c</fullName>
    <label>Officer Override</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>