force-app/main/default/objects/Loan_Application_History__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <label>Override Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>