force-app/main/default/objects/Loan_Application_History__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Application History Performed</relationshipLabel>
    <relationshipName>Application_History_Performed</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>