force-app/main/default/objects/Loan_Application_History__c/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <label>Previous Value</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>