force-app/main/default/objects/Loan_Application_History__c/fields/Risk_Score_After__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score_After__c</fullName>
    <label>Risk Score After</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>