force-app/main/default/objects/Loan_Application_History__c/fields/Risk_Score_Before__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score_Before__c</fullName>
    <label>Risk Score Before</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>