force-app/main/default/objects/Loan_Application_History__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Info</fullName>
        </value>
        <value>
            <fullName>Warning</fullName>
        </value>
        <value>
            <fullName>Error</fullName>
        </value>
        <value>
            <fullName>Critical</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>