force-app/main/default/objects/Loan_Application_History__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>System</fullName>
        </value>
        <value>
            <fullName>AI Agent</fullName>
        </value>
        <value>
            <fullName>User</fullName>
        </value>
        <value>
            <fullName>Integration</fullName>
        </value>
        <value>
            <fullName>Customer</fullName>
        </value>
        <value>
            <fullName>Scheduled Job</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>