force-app/main/default/objects/Loan_Application_History__c/validationRules/Decision_Made_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Decision_Made_Required</fullName>
    <active>true</active>
    <description>Decision Made required when event type is Loan Decision Generated</description>
    <errorConditionFormula>AND(ISPICKVAL(Event_Type__c, &quot;Loan Decision Generated&quot;), ISPICKVAL(Decision_Made__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Decision_Made__c</errorDisplayField>
    <errorMessage>Decision Made is required when Event Type is Loan Decision Generated.</errorMessage>
</ValidationRule>