force-app/main/default/objects/Loan_Application_History__c/validationRules/Event_Timestamp_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Timestamp_Not_Future</fullName>
    <active>true</active>
    <description>Event timestamp cannot be in the future</description>
    <errorConditionFormula>Event_Timestamp__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Event_Timestamp__c</errorDisplayField>
    <errorMessage>Event timestamp cannot be in the future.</errorMessage>
</ValidationRule>