force-app/main/default/objects/Loan_Application_History__c/validationRules/Override_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Override_Reason_Required</fullName>
    <active>true</active>
    <description>Override reason required when officer override is checked</description>
    <errorConditionFormula>AND(Officer_Override__c, ISBLANK(Override_Reason__c))</errorConditionFormula>
    <errorDisplayField>Override_Reason__c</errorDisplayField>
    <errorMessage>Override reason is required when Officer Override is checked.</errorMessage>
</ValidationRule>